Changed Mobile View

--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
 </head>
 <body>
 
-   
-
     <div id="question-area" class="question">
         <h1>The Magic 8-Ball</h1>
         <h2>The Magic 8-Ball is a fun fortune telling game invented in 1950.</h2>
@@ -20,17 +18,14 @@
         <button id="submit">Submit</button>
     </div>
 
-
+    <!-- FOR JS EVENTS -->
     <h2 id="display-message"></h2>
     <h2 id="ball-message"></h2>
-
     <button id="reset">Try again!</button>
 
     <footer>Image courtesy: ramon-salinero @ Unsplash</footer>
 
     <script src="index.js"></script>
-
-
     
 </body>
 </html>
